log
Wed 08 May 2024 12:46:26 AM UTC: 
 tests:  1|8
total_score: 0/70
d964ca0
Wed 08 May 2024 12:58:47 AM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
0677a27
Wed 08 May 2024 01:14:33 AM UTC: 
 treemap.c | 48 ++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 44 insertions(+), 4 deletions(-)
 tests:  5|7
total_score: 5/70
179bb45
Wed 08 May 2024 01:15:31 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|7
total_score: 5/70
9701830
Wed 08 May 2024 01:16:31 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|7
total_score: 5/70
87e70ac
Wed 08 May 2024 01:18:09 AM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
7148fbc
Wed 08 May 2024 01:23:46 AM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c:81:1: error: expected identifier or ‘(’ before ‘}’ token
   81 | }
      | ^
Compilation failed
638ca7d
Wed 08 May 2024 01:24:07 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  11|6
total_score: 15/70
1114f6e
Wed 08 May 2024 01:25:28 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
ece9fc7
Wed 08 May 2024 01:34:37 AM UTC: 
 treemap.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
 tests:  13|5
total_score: 25/70
b52b910
Wed 08 May 2024 01:39:35 AM UTC: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
68940db
Wed 08 May 2024 01:51:37 AM UTC: 
 treemap.c | 44 +++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 43 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:137:20: error: unused variable ‘aux’ [-Werror=unused-variable]
  137 |         TreeNode * aux = node->parent;
      |                    ^~~
treemap.c:156:12: error: ‘lalal’ undeclared (first use in this function)
  156 |     return lalal;
      |            ^~~~~
treemap.c:156:12: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:156:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
treemap.c:113:6: note: declared here
  113 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
169edf4
Wed 08 May 2024 01:51:53 AM UTC: 
 treemap.c | 5 -----
 1 file changed, 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:137:20: error: unused variable ‘aux’ [-Werror=unused-variable]
  137 |         TreeNode * aux = node->parent;
      |                    ^~~
cc1: all warnings being treated as errors
Compilation failed
7e78f6f
Wed 08 May 2024 01:52:28 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  16|4
total_score: 30/70
f688895
Wed 08 May 2024 01:57:39 AM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
25e65b9
Wed 08 May 2024 01:59:35 AM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  16|4
total_score: 30/70
08417ba
